--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -58,3 +58,7 @@ button {
   font-weight: 600;
   background: var(--text-main-blue);
 }
+.wrapper {
+  background-image: url("../images/light-back.webp");
+  background-size: cover;
+}
