--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -2,6 +2,8 @@
 align-self: stretch;
 flex-grow: 1;
 padding-left: 50px;
+display: flex;
+flex-direction: column;
 }
 .about-info {display: flex;
 height: 150px;
@@ -11,7 +13,9 @@ padding-left: 50px;
 padding-right: 50px;
 flex-direction: row;
  justify-content: space-between;
-  align-items: center;}
+  align-items: center;
+  display: flex;
+gap: 100px;}
 
   .years {
  height: 150px;   
