--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,10 @@
+:root {
+  --text-main-blue: #5671a6;
+  --text-dark: #383838;
+  --text-grey: #616161;
+  --text-white: #ffffff;
+  border-color: rgb(25, 221, 221);
+}
 .header {
   height: 60px;
   display: flex;
@@ -15,7 +22,7 @@
 .header-menu {
   display: flex;
   justify-content: space-between;
-
+  gap: 10px;
   padding: 10px;
 }
 .item {
@@ -26,3 +33,9 @@
 
   padding: 5px;
 }
+.header-menu-item {border-bottom: 2px solid rgba(0, 0, 0, 0);
+  cursor: pointer; 
+  transition: 0.5s;
+  margin-bottom: -5px;
+}
+.header-menu-item:hover {border-bottom: 2px solid var(--text-main-blue) }
