--- a/assets/css/qualification.css
+++ b/assets/css/qualification.css
@@ -1,6 +1,8 @@
 .qualification {align-self: stretch;
     flex-grow: 1;
-    padding-left: 50px;}
+    padding-left: 50px;
+  display: flex;
+}
     .qualification-page {display: flex;
         height: 150px;
         width: 544px;
@@ -9,10 +11,15 @@
         padding-right: 50px;
         flex-direction: row;
          justify-content: space-between;
-          align-items: center;}
+          align-items: center;
+        display: flex;}
   .development {height: 150px;   
     width: 150px;
     padding: 10px ;
    display: flex;
    justify-content: space-between;
    flex-direction: column;}
+   .pict {display: flex;
+  flex-direction: row;
+justify-content: space-between;
+gap: 10px;}
