--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -4,6 +4,7 @@ flex-grow: 1;
 padding-left: 50px;
 display: flex;
 flex-direction: column;
+padding-bottom: 100px;
 }
 .about-info {display: flex;
 height: 150px;
