--- a/assets/css/qualification.css
+++ b/assets/css/qualification.css
@@ -1,25 +1,42 @@
-.qualification {align-self: stretch;
-    flex-grow: 1;
-    padding-left: 50px;
+.qualification {
+  align-self: stretch;
+  flex-grow: 1;
+  width: 100px;
   display: flex;
 }
-    .qualification-page {display: flex;
-        height: 150px;
-        width: 544px;
-        padding-top: 11px;
-        padding-left: 50px;
-        padding-right: 50px;
-        flex-direction: row;
-         justify-content: space-between;
-          align-items: center;
-        display: flex;}
-  .development {height: 150px;   
-    width: 150px;
-    padding: 10px ;
-   display: flex;
-   justify-content: space-between;
-   flex-direction: column;}
-   .pict {display: flex;
+.qualification-about {
+  gap: 20px;
+  padding-top: 100px;
+}
+.qualification-page {
+  display: flex;
+  height: 150px;
+  width: 544px;
+  padding-top: 21px;
+  padding-left: 50px;
+  padding-right: 50px;
   flex-direction: row;
-justify-content: space-between;
-gap: 10px;}
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+.development {
+  height: 150px;
+  width: 150px;
+  padding: 5px;
+  display: flex;
+  border: 1px;
+  border-radius: 10px;
+  border-color: rgb(255, 0, 0);
+  border-style: solid;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.pict {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+  width: 50px;
+  height: 20px;
+}
