--- a/assets/css/qualification.css
+++ b/assets/css/qualification.css
@@ -26,9 +26,9 @@
   padding: 5px;
   display: flex;
   border: 1px;
-  border-radius: 10px;
+  /* border-radius: 10px;
   border-color: rgb(255, 0, 0);
-  border-style: solid;
+  border-style: solid; */
   justify-content: space-between;
   flex-direction: column;
 }
