--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -76,7 +76,6 @@ body {
 .main {
   flex-grow: 1;
   justify-content: space-around;
- 
 }
 .btn-demo:hover {
   color: var(--text-white);
@@ -94,6 +93,6 @@ body {
 }
 .btn-contact:active {
 }
-.main {display: flex;
-
+.main {
+  display: flex;
 }
