--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -33,9 +33,12 @@
 
   padding: 5px;
 }
-.header-menu-item {border-bottom: 2px solid rgba(0, 0, 0, 0);
-  cursor: pointer; 
+.header-menu-item {
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  cursor: pointer;
   transition: 0.5s;
   margin-bottom: -5px;
 }
-.header-menu-item:hover {border-bottom: 2px solid var(--text-main-blue) }
+.header-menu-item:hover {
+  border-bottom: 2px solid var(--text-main-blue);
+}
