--- a/assets/css/qualification.css
+++ b/assets/css/qualification.css
@@ -40,3 +40,16 @@
   width: 50px;
   height: 20px;
 }
+.education {
+  color: black;
+}
+.education h4 {
+  color: inherit;
+}
+
+.work {
+  color: black;
+}
+.work h4 {
+  color: inherit;
+}
