--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap");
 @import url(./normalize.css);
 @import url(./header.css);
 @import url(./sidebar.css);
 @import url(./about.css);
-@import url(./qualification.css)
+@import url(./qualification.css);
